[package]
name = "imenchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blud = "0.0.0"
blurslice = "0.1.0"
fastblur = "0.1.1"
fimg = { version = "0.4.23", features = ["text", "blur", "scale"] }
iai = { git = "https://github.com/bend-n/iai", version = "0.1.1" }
image = { version = "0.24.7", default-features = false, features = ["png"] }
imageproc = { version = "0.23.0", default-features = false }
opencv = "0.86.1"
resize = { version = "0.8.2", default-features = false, features = ["std"] }
rgb = "0.8.37"
umath = "0.0.7"

[patch.crates-io]
fimg = { git = "https://github.com/bend-n/fimg" }

[[bench]]
harness = false
name = "affine"

[[bench]]
harness = false
name = "resizing"

[[bench]]
harness = false
name = "drawing"

[[bench]]
harness = false
name = "blur"
